--- a/package.json
+++ b/package.json
@@ -19,9 +19,17 @@
     "@angular/platform-browser": "~8.1.1",
     "@angular/platform-browser-dynamic": "~8.1.1",
     "@angular/router": "~8.1.1",
+    "angular-calendar": "^0.27.18",
+    "bootstrap": "^4.3.1",
+    "date-fns": "^1.28.5",
+    "ngx-bootstrap": "^5.1.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "angular-draggable-droppable": "^1.1.1",
+    "angular-resizable-element": "^1.2.4",
+    "calendar-utils": "0.0.59",
+    "positioning": "^1.3.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.801.1",
